# QDMI-on-IQM

./: .clang-format  .clang-tidy  .cmake-format.yaml  .env.example  .gitignore  .license-tools-config.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  noxfile.py  pyproject.toml  sitecustomize.py
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  codecov.yml  release-drafter.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/scripts/: run_ctest_with_retries.ps1  run_ctest_with_retries.sh
.github/workflows/: CD.yml  CI.yml  coverage.yml  cpp-coverage.yml  cpp-install-tests.yml  cpp-linter.yml  cpp-tests-macos.yml  cpp-tests-ubuntu.yml  cpp-tests-windows.yml  documentation.yml  lint.yml  python-examples.yml  python-packaging-cibuildwheel.yml  python-packaging-sdist.yml  spank-tests.yml
cmake/: ExternalDependencies.cmake  iqm-qdmi-device-config.cmake.in
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  contributing.md  dependencies.md  development_guide.md  examples.md  header.html  index.md  layout.xml  python_package.md  qiskit.md  security.md  showcases.md  spack_guide.md  spank_plugin.md  support.md  usage.md  use_cases.md
docs/_ext/: release_substitutions.py
docs/_static/: custom.css
docs/capi/: _cpp_compat.md  device.md
docs/cpp_api/: constants.md  index.md  types.md
examples/: __init__.py  deutsch_jozsa.py  ghz.py  graphstate.py  grover.py  mqt_bench.py  qft.py  qpe.py  qsci_h2.py  qsci_postprocess.py  wstate.py
examples/showcases/: __init__.py  mqt_bench_deutsch_jozsa.py  mqt_bench_ghz.py  mqt_bench_graphstate.py  mqt_bench_qft.py  mqt_bench_wstate.py  qsci_h2.py  qsci_postprocess.py
include/: cpr_http_client.hpp  cpr_http_client_internal.hpp  curl_http_client.hpp  curl_http_client_internal.hpp  http_client.hpp  http_client_internal.hpp  iqm_api_config.hpp  iqm_auth.hpp  logging.hpp
python/iqm/qdmi/: __init__.py  __main__.py  _backends.py  _paths.py  _version.pyi  estimator.py  offloader.py  qiskit.py  sampler.py
spank/: .license-tools-config.json  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  iqm-qdmi.conf.in  iqm_qdmi_spank_plugin.cpp  iqm_spank_plugin.cpp  noxfile.py
spank/config/: slurm.conf
spank/test/: entrypoint.sh  mock_server.py  run_docker_tests.sh  test_env_injection.sh  test_hook_logs.sh  test_license_alignment.sh  verify_spank_gres_and_discovery.sh
src/: CMakeLists.txt  curl_http_client.cpp  iqm_api_config.cpp  iqm_auth.cpp  iqm_device.cpp  logging.cpp
src/internal/: CMakeLists.txt  cpr_http_client.cpp  cpr_http_client_internal.cpp  curl_http_client.cpp  http_client.cpp  iqm_api_config.cpp  iqm_auth.cpp  logging.cpp
src/tools/: CMakeLists.txt  iqm_qdmi_runner.cpp
test/: CMakeLists.txt
test/fomac/: CMakeLists.txt  fomac.cpp  fomac.hpp
test/install/: CMakeLists.txt  test_iqm_device_public_install.cpp
test/integration/: CMakeLists.txt  test_iqm_device_integration.cpp
test/mock/: CMakeLists.txt  mock_http_client.hpp
test/python/: test_estimator.py  test_init.py  test_main.py  test_offloader.py  test_qiskit_backend.py  test_sampler.py
test/showcases/: conftest.py  support.py
test/showcases/mqt_bench/: test_mqt_bench.py
test/showcases/qsci/: postprocess.py  test_qsci.py
test/unit/: CMakeLists.txt  cpr_http_client_test_support.cpp  cpr_http_client_test_support.hpp  curl_http_client_test_support.cpp  curl_http_client_test_support.hpp  http_stub.cpp  http_stub.hpp  test_cpr_http_client.cpp  test_curl_http_client.cpp  test_http_client.cpp  test_iqm_api_config.cpp  test_iqm_auth.cpp  test_iqm_device.cpp  test_logging.cpp
test/use_cases/: conftest.py  support.py
test/use_cases/mqt_bench/: test_mqt_bench.py
test/use_cases/qsci/: postprocess.py  test_qsci.py
